src/test/deca/syntax/valid/created/utilisation_methode.deca
// Description :
//    untilisation d'une methode
//
// Resultats :
//		Ok

class B {
int met(){
this.a = null;
a = this + this;}
}
class a {

int met(B b){
	met();
	b.met();
	this.met();
}
}

{
a A = new a();
 int b = A.met();
}