src/test/deca/syntax/invalid/created/class/met_missing_indent_class.deca
// Description :
//    appel methode avec l'identificateur de classe manquant
//
// Resultats :
//		Syntaxe error

{
int a = .b();
}